--- a/Rubriche/pom.xml
+++ b/Rubriche/pom.xml
@@ -7,6 +7,12 @@
     <groupId>org.example</groupId>
     <artifactId>Rubriche</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+    </dependencies>
 
 </project>
