--- a/Rubriche/pom.xml
+++ b/Rubriche/pom.xml
@@ -35,6 +35,8 @@
         <log4j.version>1.2.17</log4j.version>
         <commons-io.version>2.6</commons-io.version>
         <commons-codec.version>1.15</commons-codec.version>
+        <cucumber-junit.version>1.2.5</cucumber-junit.version>
+        <cucumber-java.version>1.2.5</cucumber-java.version>
     </properties>
 
     <dependencies>
@@ -62,6 +64,19 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
             <version>${junit-jupiter-params.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumber-junit.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber-java.version}</version>
             <scope>compile</scope>
         </dependency>
 
